--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.16",
+    "@ai-sdk/react": "^3.0.44",
+    "ai": "^6.0.42",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
